[package]
name = "jikken"
version = "0.4.0"
edition = "2021"
authors = ["Louis Russo <louis@jikken.io>"]
description = """
Jikken is a cli tool for automated API testing. It recursively
searches directories for JKT files (Jikken Test Definitions)
which will execute jobs for testing APIs. It has first class
support on Windows, macOS, and Linux. jikken.io for more info
"""
documentation = "https://github.com/jikkenio/jikken"
homepage = "https://github.com/jikkenio/jikken"
repository = "https://github.com/jikkenio/jikken"
keywords = ["test", "testing", "api", "tool"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[[bin]]
name = "jk"
path = "src/main.rs"
bench = false

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
tokio = { version = "1.23", features = ["full"] }
walkdir = { version = "2.3" }
toml = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
indicatif = {version = "0.17", features = ["rayon"] }
exitcode = {version = "1.1" }
chrono = {version = "0.4" }
log = {version = "0.4", features = ["std"] }
clap = { version = "4.1", features = ["derive"] }
assert-json-diff = { version = "2.0" }
url = { version = "2.3" }
self_update = { version = "0.34.0", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
tempfile = { version = "3.3.0" }
reqwest = { version = "0.11.13" }
remove_dir_all = { version  = "0.7.0" }
uuid = { version = "1.2.2", features = ["v4"] }
machineid-rs = { version = "1.2.1" }
dirs = { version = "4.0.0" }