[package]
name = "jikken"
version = "0.6.1"
edition = "2021"
authors = ["Louis Russo <louis@jikken.io>"]
description = """
Jikken is a CLI tool for automated API testing.
It utilizes JKT files (Jikken Test Definitions) to execute jobs for testing REST APIs.
It has first-class support on Windows, macOS, and Linux.

Visit jikken.io for more info.
"""
documentation = "https://www.jikken.io/docs/"
homepage = "https://www.jikken.io/"
repository = "https://github.com/jikkenio/jikken"
keywords = ["test", "testing", "api", "tool"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[[bin]]
name = "jk"
path = "src/main.rs"
bench = false

[dependencies]
adjacent-pair-iterator = { version = "1.0.0" }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
tokio = { version = "1.35", features = ["full"] }
walkdir = { version = "2.4" }
toml = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
indicatif = {version = "0.17", features = ["rayon"] }
chrono = {version = "0.4.31" }
log = {version = "0.4", features = ["std"] }
clap = { version = "4.4", features = ["derive"] }
assert-json-diff = { version = "2.0" }
url = { version = "2.5" }
self_update = { version = "0.37", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
tempfile = { version = "3.9" }
reqwest = { version = "0.11" }
remove_dir_all = { version  = "0.8" }
uuid = { version = "1.6", features = ["v4"] }
dirs = { version = "5.0" }
hex = { version = "0.4" }
sha2 = { version = "0.10" }
sysinfo = { version = "0.29" }
glob = { version = "0.3.1" }
validated ={ version = "0.4.0" }
enable-ansi-support = "0.2.1"

[dev-dependencies]
nonempty-collections = { version="0.1.5" }
