[package]
name = "jikken"
version = "0.8.1"
edition = "2021"
authors = ["Louis Russo <louis@jikken.io>"]
description = """
Jikken is a CLI tool for automated API testing.
It utilizes JKT files (Jikken Test Definitions) to execute jobs for testing REST APIs.
It has first-class support on Windows, macOS, and Linux.

Visit jikken.io for more info.
"""
documentation = "https://www.jikken.io/docs/"
homepage = "https://www.jikken.io/"
repository = "https://github.com/jikkenio/jikken"
keywords = ["test", "testing", "api", "tool"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[[bin]]
name = "jk"
path = "src/main.rs"
bench = false

[dependencies]
adjacent-pair-iterator = { version = "1.0.0" }
assert-json-diff = { version = "2.0" }
bytes = { version = "1.7.2" }
chrono = { version = "0.4.31" }
clap = { version = "4.4", features = ["derive"] }
dirs = { version = "5.0" }
enable-ansi-support = "0.2.1"
glob = { version = "0.3.1" }
hex = { version = "0.4" }
http-body-util = { version = "0.1.2" }
hyper = { version = "1.4.1", features = ["http1", "http2"] }
hyper-rustls = { version = "0.27.3", features = ["http2", "rustls-platform-verifier"] }
hyper-util = { version = "0.1.9" } 
indicatif = { version = "0.17", features = ["rayon"] }
log = { version = "0.4", features = ["std"] }
nonempty-collections = { version = "0.2.5" }
num = { version = "0.4.1" }
oas3 = { version = "0.4.0" }
openapiv3-extended = { version = "6.0.0", features = ["v2"] }
rand = { version = "0.8.5" }
regex = { version = "1.10.4" }
remove_dir_all = { version = "0.8" }
reqwest = { version = "0.11" }
rustls = { version = "0.23.14" }
rustls-platform-verifier = { version = "0.3.4" }
self_update = { version = "0.37", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
sha2 = { version = "0.10" }
sysinfo = { version = "0.29" }
tempfile = { version = "3.9" }
tokio = { version = "1.35", features = ["full"] }
toml = { version = "0.7" }
ulid = { version = "1.1.3", features = ["serde"] }
url = { version = "2.5" }
uuid = { version = "1.6", features = ["v4"] }
validated ={ version = "0.4.0" }
walkdir = { version = "2.4" }

[dev-dependencies]
